log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 05:03:09 PM UTC: 
 tests:  0|6
total_score: 0/70
9524609
Fri 31 Mar 2023 11:33:28 AM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f65677c
Fri 31 Mar 2023 11:38:22 AM UTC: 
 arraylist.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|5
total_score: 10/70
3f0ab93
Fri 31 Mar 2023 11:38:54 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9b89fd3
Fri 31 Mar 2023 11:41:11 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
11e6837
Fri 31 Mar 2023 11:41:42 AM UTC: 
 arraylist.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
de5d661
Fri 31 Mar 2023 11:42:19 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bc0b41f
Fri 31 Mar 2023 11:43:51 AM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
074d3bc
Fri 31 Mar 2023 11:46:51 AM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
49df3bc
Fri 31 Mar 2023 11:49:55 AM UTC: 
 arraylist.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
6aa473a
Fri 31 Mar 2023 11:50:18 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
93178a2
Fri 31 Mar 2023 11:50:51 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9379fc7
Fri 31 Mar 2023 11:51:42 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
fd3cb31
Fri 31 Mar 2023 11:52:15 AM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 15/70
44763d8
Fri 31 Mar 2023 11:52:44 AM UTC: 
 arraylist.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
82615e6
Fri 31 Mar 2023 11:53:10 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
271b9fc
Fri 31 Mar 2023 11:53:20 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
8679bbf
Fri 31 Mar 2023 11:54:29 AM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
03289ef
Fri 31 Mar 2023 11:55:25 AM UTC: 
 arraylist.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  3|4
total_score: 20/70
b2704dd
Fri 31 Mar 2023 12:05:17 PM UTC: 
 arraylist.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  3|4
total_score: 20/70
faec437
Fri 31 Mar 2023 12:16:07 PM UTC: 
 arraylist.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:9: error: array subscript ‘ArrayList {aka struct ArrayList}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   15 |     list->capacity = 2;
      |         ^~
arraylist.c:14:37: note: referencing an object of size 8 allocated by ‘malloc’
   14 |     ArrayList *list = (ArrayList *) malloc(sizeof(void *));
      |                                     ^~~~~~~~~~~~~~~~~~~~~~
arraylist.c:16:9: error: array subscript ‘ArrayList {aka struct ArrayList}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   16 |     list->size = 0;
      |         ^~
arraylist.c:14:37: note: referencing an object of size 8 allocated by ‘malloc’
   14 |     ArrayList *list = (ArrayList *) malloc(sizeof(void *));
      |                                     ^~~~~~~~~~~~~~~~~~~~~~
arraylist.c:17:9: error: array subscript ‘ArrayList {aka struct ArrayList}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   17 |     list->data = malloc(sizeof(ArrayList));
      |         ^~
arraylist.c:14:37: note: referencing an object of size 8 allocated by ‘malloc’
   14 |     ArrayList *list = (ArrayList *) malloc(sizeof(void *));
      |                                     ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fbdd04d
Fri 31 Mar 2023 12:16:32 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:9: error: array subscript ‘ArrayList {aka struct ArrayList}[0]’ is partly outside array bounds of ‘unsigned char[1]’ [-Werror=array-bounds]
   15 |     list->capacity = 2;
      |         ^~
arraylist.c:14:37: note: referencing an object of size 1 allocated by ‘malloc’
   14 |     ArrayList *list = (ArrayList *) malloc(sizeof(void));
      |                                     ^~~~~~~~~~~~~~~~~~~~
arraylist.c:16:9: error: array subscript ‘ArrayList {aka struct ArrayList}[0]’ is partly outside array bounds of ‘unsigned char[1]’ [-Werror=array-bounds]
   16 |     list->size = 0;
      |         ^~
arraylist.c:14:37: note: referencing an object of size 1 allocated by ‘malloc’
   14 |     ArrayList *list = (ArrayList *) malloc(sizeof(void));
      |                                     ^~~~~~~~~~~~~~~~~~~~
arraylist.c:17:9: error: array subscript ‘ArrayList {aka struct ArrayList}[0]’ is partly outside array bounds of ‘unsigned char[1]’ [-Werror=array-bounds]
   17 |     list->data = malloc(sizeof(ArrayList));
      |         ^~
arraylist.c:14:37: note: referencing an object of size 1 allocated by ‘malloc’
   14 |     ArrayList *list = (ArrayList *) malloc(sizeof(void));
      |                                     ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
70f45f9
Fri 31 Mar 2023 12:16:47 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
6b8aae7
Fri 31 Mar 2023 12:19:46 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
5332403
Fri 31 Mar 2023 12:20:05 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
205cc6d
Fri 31 Mar 2023 12:20:31 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
6e07f91
Fri 31 Mar 2023 12:25:30 PM UTC: 
 arraylist.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  3|4
total_score: 20/70
9dc93f2
Fri 31 Mar 2023 12:26:20 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
0c2a0d7
Fri 31 Mar 2023 12:26:45 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
624a57d
Fri 31 Mar 2023 12:27:13 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|4
total_score: 20/70
abdfec5
Fri 31 Mar 2023 12:27:37 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
40fae85
Fri 31 Mar 2023 12:28:31 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|4
total_score: 20/70
e43ed36
Fri 31 Mar 2023 12:29:23 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8abae6f
Fri 31 Mar 2023 12:29:40 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
e8439ff
Fri 31 Mar 2023 12:29:50 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
1f2a7ee
Fri 31 Mar 2023 12:31:05 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
420312b
Fri 31 Mar 2023 12:31:14 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8a16600
Fri 31 Mar 2023 12:31:40 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
8e8e7f4
